Add slight blue-green tint to dark mode alternate background color

--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -84,7 +84,7 @@ $small-breakpoint: 768px;
     --main-background-color-dark: black;
     --main-text-color-rgb: 255, 255, 255;
     --main-background-gradient: black;
-    --alt-background-color: #202020;
+    --alt-background-color: #1d2020;
     --alt-text-color-rgb: 255, 255, 255;
     --box-shadow: 0 0 2px white;
 }
