--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -551,6 +551,10 @@ Not using for now at least
     border: 2px solid white;
 }
 
+.image.background {
+    background: white;
+}
+
 .title {
     width: 100%;
     height: auto;
