--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 $medium-breakpoint: 1440px;
 $small-breakpoint: 768px;
 
@@ -13,19 +15,19 @@ $small-breakpoint: 768px;
   
     &::-webkit-scrollbar-thumb {
         background: $foreground-color;
-        border: ($size / 3.3) solid rgba(0, 0, 0, 0);
+        border: math.div($size, 3.3) solid rgba(0, 0, 0, 0);
         background-clip: padding-box;
-        border-radius: $size / 2;
+        border-radius: math.div($size, 2);
 
         &:hover {
             background: scale-color($foreground-color, $lightness: -15%);
-            border: ($size / 3.3) solid rgba(0, 0, 0, 0);
+            border: math.div($size, 3.3) solid rgba(0, 0, 0, 0);
             background-clip: padding-box;
         }
 
         &:active {
             background: scale-color($foreground-color, $lightness: -30%);
-            border: ($size / 3.3) solid rgba(0, 0, 0, 0);
+            border: math.div($size, 3.3) solid rgba(0, 0, 0, 0);
             background-clip: padding-box;
         }
     }
@@ -630,7 +632,7 @@ $slider-width: 5rem;
     width: $slider-width;
     height: $slider-height;
     background-color: var(--main-text-color);
-    border-radius: $slider-height / 2;
+    border-radius: math.div($slider-height, 2);
     border: 2px solid var(--main-text-color);
     position: fixed;
     bottom: 15px;
