--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -75,6 +75,7 @@ $small-breakpoint: 768px;
     --alt-text-color-rgb: 0, 50, 98;
     --alt-text-color: rgb(var(--alt-text-color-rgb));
     --box-shadow: 0 5px 15px black;
+    --alt-box-shadow: 0 5px 25px black;
     --fly-in-duration: 0.6s;
     --fly-in-timing-function: cubic-bezier(0.27, 0.57, 0.54, 1.02);
     --width-ratio: 1;
@@ -84,7 +85,6 @@ $small-breakpoint: 768px;
     --width-2: 0;
     --width-3: 0;
     --theme-text-color: white;
-    //@include custom-scrollbar(1.2em, hsl(209, 50%, 50%)/*hsl(240, 20%, 34%)*/, hsl(209, 70%, 15%));
     @include custom-scrollbar(1.2em, #444444, black);
 }
 
@@ -96,7 +96,7 @@ $small-breakpoint: 768px;
     --alt-background-color: #1d2020;
     --alt-text-color-rgb: 255, 255, 255;
     --box-shadow: 0 0 2px white;
-    //@include custom-scrollbar(1.2em, #444444, black);
+    --alt-box-shadow: 0 0 2px yellow;
 }
 
 * {
@@ -532,10 +532,9 @@ Not using for now at least
     }
 }
 
-// TODO implement with better color
-// .resume.card:hover {
-//     background: var(--alt-background-color);
-// }
+.resume.card:hover {
+    box-shadow: var(--alt-box-shadow);
+}
 
 .experience.card {
     height: 100%;
