--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -66,16 +66,14 @@ $small-breakpoint: 768px;
 }
 
 :root {
-    --main-background-color: #003262;
-    --main-background-color-dark: #001631;
+    --main-background-color: black;
+    --main-background-color-dark: black;
     --main-text-color-rgb: 255, 255, 255;
+    --main-background-gradient: black;
+    --alt-background-color: #1d2020;
+    --alt-text-color-rgb: 255, 255, 255;
     --main-text-color: rgb(var(--main-text-color-rgb));
-    --main-background-gradient: linear-gradient(30deg, #003262, #004893);
-    --alt-background-color: #d7cb84;
-    --alt-text-color-rgb: 0, 50, 98;
     --alt-text-color: rgb(var(--alt-text-color-rgb));
-    --box-shadow: 0 5px 15px black;
-    --alt-box-shadow: 0 5px 25px black;
     --fly-in-duration: 0.6s;
     --fly-in-timing-function: cubic-bezier(0.27, 0.57, 0.54, 1.02);
     --width-ratio: 1;
@@ -86,17 +84,6 @@ $small-breakpoint: 768px;
     --width-3: 0;
     --theme-text-color: white;
     @include custom-scrollbar(1.2em, #444444, black);
-}
-
-:root.dark-theme {
-    --main-background-color: black;
-    --main-background-color-dark: black;
-    --main-text-color-rgb: 255, 255, 255;
-    --main-background-gradient: black;
-    --alt-background-color: #1d2020;
-    --alt-text-color-rgb: 255, 255, 255;
-    --box-shadow: 0 0 2px white;
-    --alt-box-shadow: 0 0 2px yellow;
 }
 
 * {
@@ -175,7 +162,6 @@ body {
 
 .profile-picture {
     border-radius: 50%;
-    box-shadow: 0 0 10px black;
     border: 1.5px solid var(--main-text-color);
 }
 
@@ -278,28 +264,12 @@ i {
     height: auto;
     margin: 0;
     padding: 0;
-    box-shadow: 1px 0 2px var(--alt-text-color);
     position: fixed;
     top: 0;
     left: 0;
     background: var(--main-background-color-dark);
     z-index: 5;
 }
-
-/*
-Not using for now at least
-.portfolio-menu::after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: calc(100% - 3px);
-    left: 0;
-    width: 100%;
-    height: 3px;
-    background-color: var(--main-background-color-dark);
-    z-index: 2;
-}
-*/
 
 .menu-buttons {
     z-index: 3;
@@ -344,7 +314,7 @@ Not using for now at least
     margin: 0;
     padding: 0 10%;
     text-align: center;
-    background: var(--alt-background-color);
+    background: var(--main-background-color);
     /* old, not needed i think: align-items: flex-start !important; */
 }
 
@@ -436,25 +406,6 @@ Not using for now at least
     }
 }
 
-/*
-Not using for now at least
-#Experience::after {
-    width: var(--width-0);
-}
-
-#Projects::after {
-    width: var(--width-1);
-}
-
-#Coursework::after {
-    width: var(--width-2);
-}
-
-#Resume::after {
-    width: var(--width-3);
-}
-*/
-
 .section-container {
     width: 100%;
     height: auto;
@@ -509,7 +460,6 @@ Not using for now at least
     background: var(--main-background-color);
     color: var(--main-text-color);
     margin: 1vw;
-    box-shadow: var(--box-shadow);
 
     a {
         color: inherit;
@@ -533,7 +483,8 @@ Not using for now at least
 }
 
 .resume.card:hover {
-    box-shadow: var(--alt-box-shadow);
+    //TODO Change border thickness
+    height: 100%;
 }
 
 .experience.card {
@@ -552,6 +503,10 @@ Not using for now at least
     height: 12vh;
     margin: 1% 0;
     flex: 20%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .project.image-container {
@@ -569,6 +524,13 @@ Not using for now at least
     max-height: 99%;
     max-width: 99%;
     border-radius: 5px;
+}
+
+.experience.image {
+    border: 7px solid white;
+}
+
+.project.image {
     border: 2px solid white;
 }
 
@@ -638,49 +600,4 @@ footer {
         margin: 0;
         padding: 0;
     }
-}
-
-$slider-height: 2rem;
-$slider-width: 5rem;
-
-.dark-mode-slider {
-    width: $slider-width;
-    height: $slider-height;
-    background-color: var(--main-text-color);
-    border-radius: math.div($slider-height, 2);
-    border: 2px solid var(--main-text-color);
-    position: fixed;
-    bottom: 15px;
-    right: 15px;
-    cursor: pointer;
-    color: var(--theme-text-color);
-}
-
-.dark-mode-slider::before {
-    content: attr(data-theme);
-    position: absolute;
-    bottom: calc(#{$slider-height} + 10px);
-    left: 0;
-    right: 0;
-    height: auto;
-    width: auto;
-    text-align: center;
-    color: inherit;
-    font-weight: bold;
-    border-radius: 5px;
-    @include font-size(0.8rem);
-}
-
-.dark-mode-thumb {
-    border-radius: 50%;
-    width: calc(#{$slider-height} - 2px);
-    height: calc(#{$slider-height} - 2px);
-    transform: translateX(calc(#{$slider-width} / 2 - #{$slider-height} / 2));
-    background-color: var(--main-background-color-dark);
-    z-index: 2;
-    transition: transform 0.3s;
-}
-
-.dark-mode-thumb.dark-theme {
-    transform: translateX(calc(-1 * (#{$slider-width} / 2 - #{$slider-height} / 2)));
 }
