--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -278,6 +278,17 @@ i {
     }
 }
 
+@keyframes text-fun {
+    0% { transform: rotateY(0deg); }
+    1% { transform: rotateY(360deg); }
+    33% { transform: translateY(0%); }
+    33.1% { transform: translateY(-30%); }
+    33.2% { transform: translateY(0%); }
+    66% { transform: translateX(0%); }
+    66.1% { transform: translateX(50%); }
+    66.2% { transform: translateX(0%); }
+}
+
 .name-container {
     flex: 0 0 20%;
     text-align: center;
@@ -291,13 +302,19 @@ i {
         margin-right: 5vw;
         text-decoration: none;
 
+        @for $i from 1 through 13 {
+            p:nth-child(#{$i}) {
+                animation-delay: 100s + 80ms * $i;
+            }
+        }
+
         p {
             color: var(--main-text-color);
             height: auto;
             width: auto;
             margin: 0;
             display: inline-block;
-            text-transform: uppercase;
+            animation: text-fun 100s infinite;
         }
     }
 
@@ -395,8 +412,7 @@ i {
             width: 100%;
             height: 100%;
             color: var(--main-text-color);
-            letter-spacing: 0.15rem;
-            text-transform: uppercase;
+            letter-spacing: 0.07rem;
             line-height: 1.8em;
             font-weight: 200;
         }
